--- a/roles/mysql/default/main.yml
+++ b/roles/mysql/default/main.yml
@@ -8,5 +8,5 @@ mysql_root_password_update: false
 mysql_authentication_plugin: mysql_native_password
 
 ## Not supported yet
-#mysql_data_dir: "/var/lib/mysql"
-#mysql_log_dir: "/var/log/mysql"
+mysql_data_dir: "/var/lib/mysql"
+mysql_log_dir: "/var/log/mysql"
