--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -8,7 +8,7 @@ mysql_port: "{{ sweagle_mysql_port }}"
 # MySQL root user and password
 mysql_root_user: root
 mysql_root_password: root
-mysql_root_password_update: false
+mysql_root_password_update: true
 
 # not yet supported
 #mysql_data_dir: "/opt/mysql/data"
