--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -82,13 +82,13 @@
 
 - name: Set new root password for Red Hat
   shell: >
-    mysql -u root  -p{{ mysql_root_password_temp.stdout }} -NBe
+    mysql -u root  -p{{ mysql_root_password_temp.stdout }} --connect-expired-password -e
     'ALTER USER "{{ mysql_root_user }}"@localhost
     IDENTIFIED WITH mysql_native_password BY "{{ mysql_root_password }}";'
-    
+# OR
 #    mysql -u {{ mysql_root_user }} -p{{ mysql_root_password_temp.stdout }} --connect-expired-password -e
 #    "SET PASSWORD = PASSWORD('{{ mysql_root_password }}');"
-
+# OR
 #  shell: 'mysql -e "SET PASSWORD = PASSWORD(''{{ mysql_root_password }}'');" --connect-expired-password -uroot -p"{{ mysql_root_password_temp.stdout }}"'
 #  shell: 'mysql -e "SET PASSWORD = PASSWORD(''{{ mysql_root_password }}'');" --connect-expired-password -uroot'
   become: true
