--- a/inventories/all-in-one/group_vars/dbservers.yml
+++ b/inventories/all-in-one/group_vars/dbservers.yml
@@ -7,7 +7,7 @@ mysql_server: "{{ sweagle_mysql_server }}"
 mysql_port: "{{ sweagle_mysql_port }}"
 # MySQL root user and password
 mysql_root_user: root
-mysql_root_password: root
+mysql_root_password: sweagle3.MYSQL
 mysql_root_password_update: true
 
 # not yet supported
