--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -83,7 +83,7 @@
 - name: Set new root password for Red Hat
   shell: >
     mysql -u {{ mysql_root_user }}  -p{{ mysql_root_password_temp.stdout }} --connect-expired-password -e
-    "SET PASSWORD = PASSWORD('{{ mysql_root_password }}');"
+    'SET PASSWORD = PASSWORD("{{ mysql_root_password }}");'
 # OR
 #    mysql -u {{ mysql_root_user }} -p{{ mysql_root_password_temp.stdout }} --connect-expired-password -e
 #    'ALTER USER "{{ mysql_root_user }}"@localhost
