--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -82,8 +82,8 @@
 
 - name: Set new root password for Red Hat
   shell: >
-    mysql -u {{ mysql_root_user }}  -p{{ mysql_root_password_temp.stdout }} --connect-expired-password -e
-    'SET PASSWORD = PASSWORD("{{ mysql_root_password }}");'
+    mysql -u {{ mysql_root_user }}  -p"{{ mysql_root_password_temp.stdout }}" --connect-expired-password -e
+    "SET PASSWORD = PASSWORD('{{ mysql_root_password }}');"
 # OR
 #    mysql -u {{ mysql_root_user }} -p{{ mysql_root_password_temp.stdout }} --connect-expired-password -e
 #    'ALTER USER "{{ mysql_root_user }}"@localhost
