--- a/roles/sweagle/tasks/configure-sweagle-web.yml
+++ b/roles/sweagle/tasks/configure-sweagle-web.yml
@@ -33,9 +33,13 @@
     src: "{{ sweagle_version }}/nginx.conf.j2"
     dest: "/etc/nginx/nginx.conf"
   become: true
-  notify:
-     - Restart nginx
   tags: [ sweagle, sweagle-web ]
 
 # Be sure to restart Nginx to enable other scripts to work
-- meta: flush_handlers
+- name: Restart nginx
+  service:
+    name: nginx
+    enabled: yes
+    state: restarted
+  become: true
+  tags: [ sweagle, sweagle-web ]
