--- a/inventories/all-in-one/group_vars/appservers.yml
+++ b/inventories/all-in-one/group_vars/appservers.yml
@@ -1,5 +1,9 @@
 ---
 vault_backend: mysql
 vault_server: "{{ sweagle_vault_server }}"
-vault_port: "{{ sweagle_vault_port}}"
+vault_port: "{{ sweagle_vault_port }}"
 vault_copy_keys: true
+
+os_environment:
+  - key: VAULT_ADDR
+    value : "http://{{ sweagle_vault_server }}:{{ sweagle_vault_port }}"
