--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -45,6 +45,15 @@
     seconds: 15
   tags: vault
 
+- name: Populate VAULT_ADDR in /etc/environment
+  lineinfile:
+    dest: "/etc/environment"
+    state: present
+    regexp: "^{{ item.key }}"
+    line: "{{ item.key }}={{ item.value}}"
+  with_items: "{{ os_environment }}"
+  tags: vault
+
 - name: Initialize the vault
   command: vault operator init
   register: keys
