--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -52,6 +52,7 @@
     regexp: "^{{ item.key }}"
     line: "{{ item.key }}={{ item.value}}"
   with_items: "{{ os_environment }}"
+  become: true
   tags: vault
 
 - name: Initialize the vault
