--- a/roles/sweagle/tasks/configure-sweagle-core.yml
+++ b/roles/sweagle/tasks/configure-sweagle-core.yml
@@ -4,10 +4,10 @@
   when: sweagle_vault_token is undefined and vault_token is defined
   tags: [ sweagle, sweagle-core, sweagle-vault ]
 
-- name: Ask license key
-  vars_prompt:
-    - name: "sweagle_license_key"
-      prompt: "Please paste your license key:"
+- pause:
+    prompt: "Please paste your license key:"
+    echo: true
+  register: sweagle_license_key
   when: sweagle_license_key is undefined
   tags: [ sweagle, sweagle-core ]
 
