--- a/all-install.yml
+++ b/all-install.yml
@@ -63,6 +63,11 @@
     - jdk
     - vault
     - sweagle
+## Check vault
+# vault --version
+## => must return 0.7.2
+# more /opt/vault/conf/vaultconfig.hcl
+
 ## check sweagle working, start non interactive
 #cd /opt/SWEAGLE/scripts
 #./startCORE.sh
