--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -64,7 +64,7 @@
 - name: Initialize the vault
   command: "vault init -address=http://{{ sweagle_vault_server }}:{{ sweagle_vault_port }}"
   register: keys
-  when: init_status.rc == 2
+  when: init_status.rc == 2     # return code of 2 means not initialized, cf. vault init --help
   tags: vault
 # for the moment, ignore if vault is already initialized
 # in the future, test it before to init only if needed
@@ -79,7 +79,7 @@
 
 - name: Copy keys in "{{ vault_key_file }}"
   copy:
-    content: "{{ keys }}"
+    content: "{{ keys.stdout }}"
     dest: "{{ vault_key_file }}"
   become: true
   when: init_status.rc == 2 and vault_copy_keys
@@ -88,8 +88,18 @@
 - debug: msg="{{ vault_token }}"
   tags: vault
 
+- set_fact:
+#    vault_token: "{{ keys.stdout_lines[5] | regex_search(re, '\\g<digit>') }}"
+    vault_token: "{{ 'Initial Root Token: 7e03a624-27eb-decb-1ef8-238ad4892816' | regex_replace('^Initial Root Token: (.*)$','\\1') }}"
+  tags: vault
+
+- debug: msg="{{ vault_token }}"
+  tags: vault
+
+- pause:
+
 - name: Find init token
-  shell: "echo `grep 'Initial Root Token: ' {{ vault_key_file }} | sed 's/.*Initial Root Token: '`"
+  shell: "echo `grep 'Initial Root Token: ' {{ vault_key_file }} | sed 's/.*Initial Root Token: //'`"
   register: vault_token
   when: (vault_token is undefined or vault_token == "")
     and init_status.rc == 2
