--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -66,11 +66,6 @@
   register: keys
   when: init_status.rc == 2     # return code of 2 means not initialized, cf. vault init --help
   tags: vault
-# for the moment, ignore if vault is already initialized
-# in the future, test it before to init only if needed
-
-- debug: msg="{{ keys }}"
-  tags: vault
 
 - name: Define file to store result of init
   set_fact: vault_key_file="{{ vault_conf_dir }}/keys-{{ ansible_date_time.iso8601_basic_short }}.txt"
@@ -88,22 +83,17 @@
 - debug: msg="{{ vault_token }}"
   tags: vault
 
-- set_fact:
-#    vault_token: "{{ keys.stdout_lines[5] | regex_search(re, '\\g<digit>') }}"
-    vault_token: "{{ 'Initial Root Token: 7e03a624-27eb-decb-1ef8-238ad4892816' | regex_replace('^Initial Root Token: (.*)$','\\1') }}"
-  tags: vault
-
-- debug: msg="{{ vault_token }}"
-  tags: vault
-
-- pause:
-
 - name: Find init token
-  shell: "echo `grep 'Initial Root Token: ' {{ vault_key_file }} | sed 's/.*Initial Root Token: //'`"
-  register: vault_token
+  set_fact:
+    vault_token: "{{ keys.stdout_lines[5] | regex_replace('^Initial Root Token: (.*)$','\\1') }}"
   when: (vault_token is undefined or vault_token == "")
     and init_status.rc == 2
   tags: vault
 
-- debug: msg="{{ vault_token }}"
+#  shell: "echo `grep 'Initial Root Token: ' {{ vault_key_file }} | sed 's/.*Initial Root Token: //'`"
+#- name: Find init token
+#  register: vault_token
+#  tags: vault
+
+- debug: msg="Vault Init Token = {{ vault_token }}"
   tags: vault
