--- a/inventories/all-in-one/hosts.yml
+++ b/inventories/all-in-one/hosts.yml
@@ -4,18 +4,22 @@ all:
     localhost
   children:
 
-    webservers:
+    installserver:
       hosts:
         localhost
 
+    webservers:
+      children:
+        installserver:
+
     appservers:
       children:
-        webservers:
+        installserver:
 
     indexservers:
       children:
-        webservers:
+        installserver:
 
     dbservers:
       children:
-        webservers:
+        installserver:
