--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -6,7 +6,7 @@
     - "{{ ansible_distribution_release }}.yml"
     - "{{ ansible_distribution }}.yml"
     - "{{ ansible_os_family }}.yml"
-  tags: mongodb
+  tags: [ mongodb, sweagle, sweagle-mongo ]
 
 - name: Include installation tasks
   include: "{{ item }}"
