--- a/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
@@ -31,7 +31,7 @@
   tags: elasticsearch
 
 - name: RedHat - include versionlock
-  include: elasticsearch-RedHat-version-lock.yml
+  include_tasks: elasticsearch-RedHat-version-lock.yml
   when: es_version_lock
   tags: elasticsearch
 
