--- a/roles/elasticsearch/tasks/elasticsearch.yml
+++ b/roles/elasticsearch/tasks/elasticsearch.yml
@@ -2,15 +2,15 @@
 
 - name: Include optional user and group creation.
   when: (es_user is defined) and (es_group is defined)
-  include: elasticsearch-optional-user.yml
+  include_tasks: elasticsearch-optional-user.yml
   tags: [ elasticsearch, sweagle, sweagle-elasticsearch ]
 
 - name: Include specific Elasticsearch
-  include: elasticsearch-Debian.yml
+  include_tasks: elasticsearch-Debian.yml
   when: ansible_os_family == 'Debian'
   tags: elasticsearch
 
 - name: Include specific Elasticsearch
-  include: elasticsearch-RedHat.yml
+  include_tasks: elasticsearch-RedHat.yml
   when: ansible_os_family == 'RedHat'
   tags: elasticsearch
