--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,37 +1,37 @@
 ---
 
-- name: Include OS-specific variables
-  include_vars: "{{ item }}"
+- name: include_tasks OS-specific variables
+  include_tasks_vars: "{{ item }}"
   with_first_found:
     - "{{ ansible_distribution_release }}.yml"
     - "{{ ansible_distribution }}.yml"
     - "{{ ansible_os_family }}.yml"
   tags: [ mongodb, sweagle, sweagle-mongo ]
 
-- name: Include installation tasks
-  include: "{{ item }}"
+- name: include_tasks installation tasks
+  include_tasks: "{{ item }}"
   with_first_found:
     - "install.{{ ansible_distribution | lower }}.yml"
     - "install.{{ ansible_os_family | lower }}.yml"
   tags: mongodb
 
-- name: Include configuration.yml
-  include: configure.yml
+- name: include_tasks configuration.yml
+  include_tasks: configure.yml
   tags: mongodb
 
-- name: Include SWEAGLE configuration.yml
-  include: configure-sweagle.yml
+- name: include_tasks SWEAGLE configuration.yml
+  include_tasks: configure-sweagle.yml
   tags: [ mongodb, sweagle, sweagle-mongodb ]
 
-- name: Include replication and auth configuration
-  include: replication_init_auth.yml
+- name: include_tasks replication and auth configuration
+  include_tasks: replication_init_auth.yml
   when: ( mongodb_replication_replset | length > 0
         and mongodb_security_authorization == 'enabled'
         and mongodb_master is defined and mongodb_master )
   tags: mongodb
 
-- name: Include replication configuration
-  include: replication.yml
+- name: include_tasks replication configuration
+  include_tasks: replication.yml
   when: mongodb_replication_replset | length > 0
   tags: [mongodb]
 
@@ -48,8 +48,8 @@
   no_log: true
   tags: mongodb
 
-- name: Include authorization configuration
-  include: auth_initialization.yml
+- name: include_tasks authorization configuration
+  include_tasks: auth_initialization.yml
   when: ( mongodb_security_authorization == 'enabled'
           and not mongodb_replication_replset
           and mongodb_user_admin_check.rc != 0 )
@@ -112,7 +112,7 @@
   no_log: false
   tags: [mongodb]
 
-- name: Include MMS Agent configuration
-  include: mms-agent.yml
+- name: include_tasks MMS Agent configuration
+  include_tasks: mms-agent.yml
   when: mongodb_mms_api_key | length > 0
   tags: mongodb
