--- a/roles/elasticsearch/tasks/xpack/elasticsearch-xpack.yml
+++ b/roles/elasticsearch/tasks/xpack/elasticsearch-xpack.yml
@@ -1,15 +1,18 @@
 ---
 
 - name: set fact es_version_changed
-  set_fact: es_version_changed={{ ((elasticsearch_install_from_package is defined and (debian_elasticsearch_install_from_repo.changed or redhat_elasticsearch_install_from_repo.changed)) or (elasticsearch_install_from_package is defined and elasticsearch_install_from_package.changed)) }}
+  set_fact: es_version_changed={{ ((elasticsearch_install_from_package is defined
+    and (debian_elasticsearch_install_from_repo is defined or elasticsearch_install_from_package is defined)
+    and (debian_elasticsearch_install_from_repo.changed or redhat_elasticsearch_install_from_repo.changed))
+    or (elasticsearch_install_from_package is defined and elasticsearch_install_from_package.changed)) }}
 
 - name: include elasticsearch-xpack-install.yml
-  include: elasticsearch-xpack-install.yml
+  include_tasks: elasticsearch-xpack-install.yml
   when: es_install_xpack
 
 #Security configuration
 - name: include security/elasticsearch-security.yml
-  include: security/elasticsearch-security.yml
+  include_tasks: security/elasticsearch-security.yml
   when: es_enable_xpack
 
 #Add any feature specific configuration here
