correct xpack set facts

--- a/all-install.yml
+++ b/all-install.yml
@@ -76,4 +76,4 @@
 
 ## test with:
 # curl http://127.0.0.1
-## => you should get the sweagle login page
+## => you should get the SWEAGLE login page
